--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,3 +12,26 @@ invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
+
+
+detailPageTitle=Walkthrough - Details
+
+detailPageTitle=Walkthrough - Details
+ratingConfirmation=You have rated this product with {0} stars
+dateTitle=Order date
+quantityTitle=Quantity
+
+productRatingLabelInitial=Please rate this product
+productRatingLabelIndicator=Your rating: {0} out of {1}
+productRatingLabelFinal=Thank you for your rating!
+productRatingButton=Rate
+
+Overview_rootLabel=Overview Page
+Overview_headerLabel=Header
+Overview_contentLabel=Page Content
+ratingTitle=Rate the Product
